fix(main): increase size of preview images on smaller screens

--- a/main.css
+++ b/main.css
@@ -135,8 +135,8 @@
         cursor: default;
       }
 
-      max-width: 50vw;
-      max-height: 90vh;
+      max-width: 80vw;
+      max-height: 80vh;
 
       position: fixed;
       transition: transform 0.2s;
